# FastClaude

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-01-fastclaude-mvp.md  2026-05-01-fastclaude-plan-2-polish.md  2026-05-01-fastclaude-plan-3-shipping.md  2026-05-01-futuristic-ui.md  2026-05-03-default-prompt.md  2026-05-03-themed-titlebar.md
docs/superpowers/specs/: 2026-05-01-fastclaude-design.md  2026-05-01-fastclaude-plan-3-shipping.md  2026-05-01-futuristic-ui-design.md  2026-05-03-default-prompt-design.md  2026-05-03-themed-titlebar-design.md
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  cost_reader.rs  error.rs  lib.rs  main.rs  poller.rs  recent_projects.rs  session_registry.rs  usage_reader.rs
src-tauri/src/spawner/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/window_focus/: linux.rs  macos.rs  mod.rs  windows.rs
src/components/: AuroraBackground.tsx  Dashboard.tsx  DashboardActions.tsx  EmptyState.tsx  History.tsx  HotkeyCapture.tsx  LaunchDialog.tsx  Onboarding.tsx  SessionRow.tsx  Settings.tsx  TitleBar.tsx  UpdateBanner.tsx  UsageStrip.tsx
src/components/ui/: button.tsx  dialog.tsx  input.tsx  select.tsx  textarea.tsx  toast.tsx
src/lib/: ipc.ts  launch-options.ts  models.ts
