[package]
name = "fastclaude"
version = "0.1.0"
description = "FastClaude — manage live Claude Code sessions"
authors = ["FastClaude"]
edition = "2021"

[lib]
name = "fastclaude_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

rusqlite = { version = "0.31", features = ["bundled"] }
sysinfo = "0.30"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tokio = { version = "1", features = ["full"] }
shlex = "1"
shell-escape = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
] }
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
